# telegram_dictionary

./: .gitignore  bot.py  config_reader.py  pyproject.toml
config/: .env  config.py  logger_config.json
db/: db.py
handlers/: add_words.py  learn_handler.py  learn_words.py  progress.py  repeat_handler.py  repeat_learn_words_handler.py  repeat_learned_words.py  repeat_words.py  start.py  user_progress_handler.py
keyboards/: simple_row.py
model/: db.py
model/database_migrations/: alembic.ini
model/database_migrations/alembic/versions/: f99faacc1ee0_create_user_and_terms_tables.py
models/: models.py
state/: states.py
